About me change

--- a/index.qmd
+++ b/index.qmd
@@ -13,7 +13,12 @@ about:
 
 ## About Me
 
-Hello! I'm Nhi. I'm an undergraduate student studying Mathematics, Data Science, and Chinese at St. Olaf College. I love learning about text and sentiment analysis and predictive models for transportation-related problems, especially in aviation. I collect a lot of Lego sets and my favorite themes are Architecture and Technic. Explore around my website to learn more!
+Hello! I'm Nhi. I'm an undergraduate student studying Mathematics, Data Science, and Chinese at St. Olaf College. I love learning about text and sentiment analysis and predictive models for transportation-related problems.
+My journey in data science has just begun and I'm very excited to see what's ahead!
+
+Outside of academia, I collect a lot of Lego sets and my favorite themes are Architecture and Technic. I also like to travel abroad as well.
+
+Explore around my website to learn more!
 
 ## Education
 
